--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-groq>=1.1.0",
     "pydantic>=2.12.4",
+    "pypdf>=6.4.0",
     "python-dotenv>=1.2.1",
     "qdrant-client>=1.16.0",
     "sentence-transformers>=5.1.2",
