--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic>=2.12.4",
     "pypdf>=6.4.0",
     "python-dotenv>=1.2.1",
+    "python-multipart>=0.0.20",
     "qdrant-client>=1.16.0",
     "sentence-transformers>=5.1.2",
     "uvicorn>=0.38.0",
